fix: make tabbing visible within the buttons

--- a/es-ds-styles/scss/_buttons.scss
+++ b/es-ds-styles/scss/_buttons.scss
@@ -122,6 +122,8 @@ fieldset:disabled a.btn {
   &:focus,
   &.focus {
     text-decoration: variables.$link-hover-decoration;
+    border-width: 0.1rem;
+    border-color: variables.$blue-500;
   }
 
   &:disabled,
